# MAGOT2

./: LICENSE  README.md  setup.cfg  setup.py
MAGOT2/: __main__.py  lib.py  tools.py
