[metadata]
name = MAGOT2
version = 0.1.0

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
		defopt
        numpy
        pandas
        intervaltree

[options.entry_points]
console_scripts =
    MAGOT2 = MAGOT2.__main__:entry_point

