[metadata]
name = MAGOT2
version = 2.0.1
description = "New, simpler toolkit for random common genomic analyses"
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
		defopt
        numpy
        pandas
        intervaltree
        pysam
        ete3
        matplotlib


[options.entry_points]
console_scripts =
    MAGOT = MAGOT2.__main__:entry_point

